make it happens

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix nft_web && npm run build --prefix nft_web"
+    "heroku-postbuild" :"NPM_CONFIG_PRODUCTION=false npm install --prefix nft_web && npm rub build --prefix nft_web"
   },
   "author": "Louis",
   "license": "ISC",
