--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT=9000
 mongoURI=mongodb+srv://admin:admin@serverlessinstance0.qt9z7.mongodb.net/nftProjectDB?retryWrites=true&w=majority
-NODE_ENV=development
+NODE_ENV=production
