--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "multer-gridfs-storage": "^5.0.2",
     "path": "^0.12.7",
     "pusher": "^5.0.0"
+  },
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": ">=10.0.0"
   }
 }
