--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix nft_web && npm run build --prefix nft_web"
+    "start": "node server.js"
   },
   "author": "Louis",
   "license": "ISC",
