--- a/nft_web/package.json
+++ b/nft_web/package.json
@@ -2,6 +2,7 @@
   "name": "nft_web",
   "version": "0.2.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -51,6 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": "^17.3.0"
   },
   "devDependencies": {
     "react-router-dom": "^5.3.0"
